--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -14,7 +14,7 @@
 @utility text-body {
   white-space: pre-wrap;
   font-weight: var(--font-weight-regular);
-  @apply text-neutral-fg-2-rest;
+  @apply text-black;
 }
 
 @utility text-heading {
@@ -31,7 +31,7 @@
     @apply text-body leading-[22px] text-[16px];
   }
   .text-body-300 {
-    @apply text-body text-neutral-fg-3-rest leading-[20px] text-[14px];
+    @apply text-body leading-[24px] text-[18px] font-medium;
   }
   .text-body-200 {
     @apply text-body text-neutral-fg-3-rest leading-[16px] text-[12px];
