--- a/src/styles/_utilities.scss
+++ b/src/styles/_utilities.scss
@@ -1,5 +1,5 @@
 @utility container {
-  @apply mx-auto px-[16px] xl:px-[32px];
+  @apply mx-auto px-[16px] xl:px-[32px] grid grid-cols-12 gap-[20px];
 }
 
 @utility section {
